--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 click==6.7
 Flask==0.12.3
+gunicorn==20.0.4
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 peewee==3.2.2
-psycopg2-binary==2.7.4
+psycopg2-binary==2.8.5
 Werkzeug==0.14.1
